--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,11 @@
         <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 
+    <style name="TextTitle">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">28dp</item>
+        <item name="android:textColor">#FF3C3C3C</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
 </resources>
