--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="vm"
-            type="com.depromeet.muyaho.MainViewModel" />
+            type="com.depromeet.muyaho.ui.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
