--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,7 +49,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="110dp"
-            android:background="@drawable/home_budget_card_bg_shape"
+            android:background="@drawable/shape_bg_radius_14dp"
+            android:backgroundTint="#494949"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="325dp"
@@ -96,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="29dp"
                 android:gravity="center"
-                android:background="@drawable/home_budget_percent_bg_shape"
+                android:background="@drawable/shape_bg_radius_14dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -115,7 +116,7 @@
             android:layout_width="0dp"
             android:layout_height="90dp"
             app:layout_constraintHorizontal_weight="100"
-            android:background="@drawable/home_profit_bg_shape"
+            android:background="@drawable/shape_bg_radius_14dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@id/cl_profit_price"
@@ -166,7 +167,7 @@
             android:layout_width="0dp"
             android:layout_height="90dp"
             app:layout_constraintHorizontal_weight="204"
-            android:background="@drawable/home_profit_bg_shape"
+            android:background="@drawable/shape_bg_radius_14dp"
             app:layout_constraintLeft_toRightOf="@id/cl_profit_percent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
