--- a/app/src/main/res/layout/fragment_add_stock_select_type.xml
+++ b/app/src/main/res/layout/fragment_add_stock_select_type.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="vm"
+            type="com.depromeet.muyaho.addstock.AddStockSelectTypeViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -46,7 +52,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="200dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_marginRight="20dp"
+            app:setCheckChangeListener="@{vm.stockTypeCheckChangeListener}">
 
             <RadioButton
                 android:id="@+id/rb_domestic_stock"
@@ -97,12 +104,14 @@
             style="@style/TextCaption1"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_search"
             android:layout_width="match_parent"
             android:layout_height="32dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="298dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_marginRight="20dp"
+            android:onClick="@{() -> vm.onSearchBtnClick()}">
 
             <ImageView
                 android:id="@+id/iv_search"
