--- a/app/src/main/res/layout/fragment_add_stock_search.xml
+++ b/app/src/main/res/layout/fragment_add_stock_search.xml
@@ -28,6 +28,55 @@
             android:layout_marginTop="33dp"
             android:layout_marginRight="8dp"/>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_search"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="102dp"
+            android:layout_marginRight="20dp">
+
+            <EditText
+                android:id="@+id/et_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/shape_bg_stroke_radius_10dp"
+                android:drawableLeft="@drawable/ic_search_gray_24"
+                android:drawableTint="@color/primary_blue_fade"
+                android:paddingLeft="16dp"
+                android:drawablePadding="8dp"
+                android:hint="@string/add_stock_search_edit_text_hint"
+                android:textColorHint="@color/black_5"
+                android:inputType="text"
+                android:maxLines="1"
+                android:imeOptions="actionSearch"
+                style="@style/TextBody2"/>
+            
+            <ImageView
+                android:id="@+id/iv_delete"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_btn_delete_16"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginRight="16dp"
+                android:visibility="gone"/>
+            
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_search_result"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/cl_search"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginRight="20dp"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
