--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/fragment_home"
-        android:name="com.depromeet.muyaho.home.HomeFragment"
+        android:name="com.depromeet.muyaho.ui.home.HomeFragment"
         tools:layout="@layout/fragment_home">
 
     </fragment>
