--- a/app/src/main/res/layout/fragment_add_stock_search.xml
+++ b/app/src/main/res/layout/fragment_add_stock_search.xml
@@ -19,6 +19,7 @@
             style="@style/TextBody1"/>
 
         <ImageView
+            android:id="@+id/iv_close"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/ic_cancel_white_24"
@@ -55,14 +56,12 @@
             
             <ImageView
                 android:id="@+id/iv_delete"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
+                android:layout_width="32dp"
+                android:layout_height="match_parent"
                 android:src="@drawable/ic_btn_delete_16"
-                app:layout_constraintTop_toTopOf="parent"
+                android:scaleType="center"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginRight="16dp"
-                android:visibility="gone"/>
+                android:layout_marginRight="8dp" />
             
         </androidx.constraintlayout.widget.ConstraintLayout>
 
