--- a/app/src/main/res/navigation/nav_add_stock.xml
+++ b/app/src/main/res/navigation/nav_add_stock.xml
@@ -20,9 +20,24 @@
         android:name="com.depromeet.muyaho.ui.addstock.AddStockSearchFragment"
         tools:layout="@layout/fragment_add_stock_search">
 
+        <action
+            android:id="@+id/action_search_to_input"
+            app:destination="@id/fragment_add_stock_input"/>
+
         <argument
             android:name="stockType"
             app:argType="string"/>
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/fragment_add_stock_input"
+        android:name="com.depromeet.muyaho.ui.addstock.AddStockInputFragment"
+        tools:layout="@layout/fragment_add_stock_input">
+
+        <argument
+            android:name="stock"
+            app:argType="com.depromeet.muyaho.data.Stock"/>
 
     </fragment>
 
