--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,41 +20,41 @@
     <style name="TextBase">
         <item name="android:textColor">@color/white_1</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="fontFamily">@font/spoqa_han_sans_neo_regular</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_regular</item>
     </style>
 
     <style name="TextH1" parent="TextBase">
         <item name="android:textSize">36dp</item>
-        <item name="fontFamily">@font/spoqa_han_sans_neo_bold</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_bold</item>
         <item name="lineHeight">42dp</item>
         <item name="android:letterSpacing">-2</item>
     </style>
 
     <style name="TextH2" parent="TextBase">
         <item name="android:textSize">30dp</item>
-        <item name="fontFamily">@font/spoqa_han_sans_neo_bold</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_bold</item>
         <item name="lineHeight">38dp</item>
     </style>
 
     <style name="TextH2.Light" parent="TextH2">
-        <item name="fontFamily">@font/spoqa_han_sans_neo_light</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_light</item>
     </style>
 
     <style name="TextSubtitle1" parent="TextBase">
         <item name="android:textSize">24dp</item>
-        <item name="fontFamily">@font/spoqa_han_sans_neo_bold</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_bold</item>
         <item name="lineHeight">32dp</item>
     </style>
 
     <style name="TextSubtitle2" parent="TextBase">
         <item name="android:textSize">18dp</item>
-        <item name="fontFamily">@font/spoqa_han_sans_neo_bold</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_bold</item>
         <item name="lineHeight">24dp</item>
     </style>
 
     <style name="TextBody1" parent="TextBase">
         <item name="android:textSize">16dp</item>
-        <item name="fontFamily">@font/spoqa_han_sans_neo_bold</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_bold</item>
         <item name="lineHeight">22dp</item>
     </style>
 
@@ -64,7 +64,7 @@
     </style>
 
     <style name="TextBody2.Bold" parent="TextBody2">
-        <item name="fontFamily">@font/spoqa_han_sans_neo_bold</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_bold</item>
     </style>
 
     <style name="TextCaption1" parent="TextBase">
@@ -73,65 +73,13 @@
     </style>
 
     <style name="TextCaption1.Bold" parent="TextCaption1">
-        <item name="fontFamily">@font/spoqa_han_sans_neo_bold</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_bold</item>
     </style>
 
     <style name="TextCaption2" parent="TextBase">
         <item name="android:textSize">11dp</item>
-        <item name="fontFamily">@font/spoqa_han_sans_neo_bold</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_bold</item>
         <item name="lineHeight">16dp</item>
-    </style>
-
-    <style name="TextH1" parent="TextBase">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">36dp</item>
-    </style>
-
-    <style name="TextH2" parent="TextBase">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">30dp</item>
-    </style>
-
-    <style name="TextH2.Light" parent="TextH2">
-        <item name="android:textStyle">normal</item>
-    </style>
-
-    <style name="TextSubtitle1" parent="TextBase">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">24dp</item>
-    </style>
-
-    <style name="TextSubtitle2" parent="TextBase">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">18dp</item>
-    </style>
-
-    <style name="TextBody1" parent="TextBase">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16dp</item>
-    </style>
-
-    <style name="TextBody2" parent="TextBase">
-        <item name="android:textStyle">normal</item>
-        <item name="android:textSize">14dp</item>
-    </style>
-
-    <style name="TextBody2.Bold" parent="TextBody2">
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="TextCaption1" parent="TextBase">
-        <item name="android:textStyle">normal</item>
-        <item name="android:textSize">12dp</item>
-    </style>
-
-    <style name="TextCaption1.Bold" parent="TextCaption1">
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="TextCaption2" parent="TextBase">
-        <item name="android:textStyle">normal</item>
-        <item name="android:textSize">11dp</item>
     </style>
 
 </resources>
