--- a/app/src/main/res/layout/fragment_modify_stock_select.xml
+++ b/app/src/main/res/layout/fragment_modify_stock_select.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="vm"
-            type="com.depromeet.muyaho.ui.addstock.AddStockSelectTypeViewModel" />
+            type="com.depromeet.muyaho.ui.modifystock.ModifyStockSelectViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_stock_add_new_item"
+            android:text="@string/modify_stock_modify_item"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -37,7 +37,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_stock_inform_new_item"
+            android:text="@string/modify_stock_select_modify_item"
             android:lineSpacingExtra="5dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -53,8 +53,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="200dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            app:setCheckChangeListener="@{vm.stockTypeCheckChangeListener}">
+            android:layout_marginRight="20dp">
 
             <RadioButton
                 android:id="@+id/rb_domestic_stock"
@@ -65,7 +64,6 @@
                 android:button="@null"
                 android:background="@drawable/shape_bg_stroke_radius_10dp_selector"
                 android:text="@string/domestic_stock"
-                android:checked="true"
                 style="@style/TextBody2"/>
 
             <RadioButton
@@ -94,53 +92,30 @@
 
         </RadioGroup>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/stock_name"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="270dp"
-            style="@style/TextCaption1"/>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_search"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_stock"
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="298dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/rg_stock_type"
+            app:layout_constraintBottom_toTopOf="@id/tv_next"
+            android:layout_margin="20dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+        <TextView
+            android:id="@+id/tv_next"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:text="@string/next"
+            android:background="@drawable/shape_bg_fill_radius_8dp"
+            android:backgroundTint="@color/primary_enable_color_selector"
+            app:layout_constraintTop_toBottomOf="@id/rv_stock"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:onClick="@{() -> vm.onSearchBtnClick()}">
-
-            <ImageView
-                android:id="@+id/iv_search"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_search_gray_24"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/add_stock_search_stock_name"
-                android:textStyle="normal"
-                android:textColor="@color/black_5"
-                app:layout_constraintLeft_toRightOf="@id/iv_search"
-                app:layout_constraintTop_toTopOf="@id/iv_search"
-                app:layout_constraintBottom_toBottomOf="@id/iv_search"
-                android:layout_marginLeft="8dp"
-                style="@style/TextBody1" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/black_5"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginBottom="32dp"
+            style="@style/TextCaption1.Bold"
+            android:enabled="false"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
