--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -2,6 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="vm"
+            type="com.depromeet.muyaho.ui.sign.SignViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -35,6 +42,7 @@
             android:layout_marginBottom="16dp"
             android:background="@drawable/shape_bg_radius_10dp"
             android:gravity="center"
+            android:onClick="@{() -> vm.onClickKakao()}"
             android:text="@string/sign_kakao"
             android:textAppearance="@style/TextCaption1.Bold"
             android:textColor="@color/black"
