홈화면 1차 구현 완료

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -72,6 +72,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center_horizontal"
                         android:text="@string/home_today_benefit"
                         style="@style/TextH2"/>
 
@@ -79,6 +81,8 @@
                         android:id="@+id/tv_today_benefit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center_horizontal"
                         style="@style/TextH2"/>
 
                 </LinearLayout>
@@ -87,10 +91,11 @@
                     android:id="@+id/iv_youngchan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:src="@drawable/image_youngchan_gray"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginTop="116dp"/>
+                    android:layout_marginTop="104dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
