--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,23 +17,22 @@
             android:id="@+id/nav_host"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>
+            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:labelVisibilityMode="unlabeled"
-            app:menu="@menu/menu_bottom_navigation"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-        
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:menu="@menu/menu_bottom_navigation" />
+
         <com.depromeet.muyaho.widget.HomeFABView
             android:id="@+id/view_fab"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:elevation="10dp"/>
+            android:elevation="10dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
