--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
-    <style name="Theme.Muyaho" parent="Base.Theme.Muyaho"/>
+    <style name="Theme.Muyaho" parent="Base.Theme.Muyaho" />
 
     <style name="Theme.Muyaho.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -47,6 +47,12 @@
     </style>
 
     <style name="TextSubtitle2" parent="TextBase">
+        <item name="android:textSize">18dp</item>
+        <item name="fontFamily">@font/spoqa_han_sans_neo_regular</item>
+        <item name="lineHeight">24dp</item>
+    </style>
+
+    <style name="TextSubtitle2.Bold" parent="TextBase">
         <item name="android:textSize">18dp</item>
         <item name="fontFamily">@font/spoqa_han_sans_neo_bold</item>
         <item name="lineHeight">24dp</item>
