--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -62,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="46dp"
             android:text="회원탈퇴"
+            android:onClick="@{() -> vm.onClickLeave()}"
             android:textAppearance="@style/TextCaption1"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
