--- a/app/src/main/res/layout/activity_nickname.xml
+++ b/app/src/main/res/layout/activity_nickname.xml
@@ -4,6 +4,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="vm"
             type="com.depromeet.muyaho.my.NicknameViewModel" />
@@ -87,9 +89,11 @@
             android:layout_width="100dp"
             android:layout_height="24dp"
             android:layout_marginEnd="20dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/et_nickname"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/et_nickname" />
+            app:layout_constraintTop_toTopOf="@id/et_nickname"
+            app:visibleIf="@{vm.state.conflict}" />
 
         <TextView
             android:layout_width="match_parent"
@@ -98,13 +102,12 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="64dp"
             android:background="@drawable/shape_bg_radius_8dp"
-            android:backgroundTint="#66FFFFFF"
-            android:enabled="@{vm.state.enabled}"
+            android:backgroundTint="@{vm.state.enabled ? @color/white : @color/white_2_40}"
             android:gravity="center"
             android:onClick="@{() -> vm.onClickStart()}"
             android:text="@string/nickname_start"
             android:textAppearance="@style/TextBody2.Bold"
-            android:textColor="@color/white"
+            android:textColor="@{vm.state.enabled ? @color/primary_blue : @color/white}"
             app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
