--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -5,24 +5,24 @@
         android:id="@+id/nav_home"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="@string/menu_home"/>
+        android:title="@string/menu_home" />
 
     <item
         android:id="@+id/nav_calc"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_calculate_24"
-        android:title="@string/menu_calc"/>
+        android:title="@string/menu_calc" />
 
     <item
         android:id="@+id/nav_board"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_event_note_24"
-        android:title="@string/menu_board"/>
+        android:title="@string/menu_board" />
 
     <item
-        android:id="@+id/nav_my"
+        android:id="@+id/nav_mypage"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_person_24"
-        android:title="@string/menu_my"/>
+        android:title="@string/menu_my" />
 
 </menu>
