--- a/app/src/main/res/navigation/nav_mypage.xml
+++ b/app/src/main/res/navigation/nav_mypage.xml
@@ -2,12 +2,12 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_my"
-    app:startDestination="@id/fragment_my">
+    android:id="@+id/nav_mypage"
+    app:startDestination="@id/fragment_mypage">
 
     <fragment
-        android:id="@+id/fragment_my"
-        android:name="com.depromeet.muyaho.ui.my.MyFragment"
+        android:id="@+id/fragment_mypage"
+        android:name="com.depromeet.muyaho.ui.my.MyPageFragment"
         tools:layout="@layout/fragment_mypage">
 
     </fragment>
