바텀 네비게이션 아이콘 변경 테마 변경 (daynight 삭제) status bar, navigation bar 배경 색상 변경

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
             android:layout_height="wrap_content"
             app:labelVisibilityMode="unlabeled"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/menu_bottom_navigation" />
+            app:menu="@menu/menu_bottom_navigation"
+            android:background="@color/black_1"/>
 
         <com.depromeet.muyaho.widget.HomeFABView
             android:id="@+id/view_fab"
